crates/compiler/test_syntax/tests/snapshots/pass/where_ident.expr.formatted.roc
where = { where: 1 }
where.where