crates/compiler/test_syntax/tests/snapshots/fail/where_type_variable.expr.roc
role : Role where
role = Admin

role
